fix overflow

--- a/css/about.css
+++ b/css/about.css
@@ -11,13 +11,6 @@ html {
 }
 
 
-.about__hero {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    background: linear-gradient(45deg, #1a1a1a 0%, #2a2a2a 100%);
-}
-
 .about__container {
     max-width: 1200px;
     margin: 0 auto;
@@ -54,6 +47,14 @@ html {
 }
 
 
+.about__hero {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    background: linear-gradient(45deg, #1a1a1a 0%, #2a2a2a 100%);
+    padding-bottom: 3em;
+}
+
 .about__hero h1 {
     font-size: 5rem;
     margin: 0;
@@ -81,23 +82,23 @@ html {
 }
 
 .about__social {
-    /* background-color: black; */
+    /* background-color: var(--dark); */
     display: flex;
+    gap: 30px;
     justify-content: space-evenly;
-    /* grid-template-columns: repeat(auto-fit, 150px); */
-    margin: 3em 0;
-    padding: 3em;
+    margin: 0em 0;
+    padding: 3em 0 0;
 }
 
 .about__social img {
-    height: 50px;
+    height: 150px;
     width: auto;
     object-fit: contain;
 }
 
 
 .about__projects {
-    padding: 100px 0;
+    padding: 10px 0;
 }
 
 .about__project-grid {
